# paper-boy

./: .gitignore  CLAUDE.md  Claude.md  README.md  ffxiv-newsletter-style-a.html  ffxiv-newsletter-style-b.html  ffxiv-newsletter-style-c.html  ffxiv-newsletter-style-d.html  ffxiv-newsletter-style-e.html
.claude/skills/generate-newsletter/: SKILL.md
backend/: .env.example  .gitignore  pyproject.toml
backend/apps/delivery/: pipeline.py  tasks.py  urls.py  views.py
backend/apps/newsletters/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  local.py  production.py
config/: ffxiv.md  shared.md
frontend/: index.html  package.json
frontend/src/: App.vue
frontend/src/api/: auth.js  client.js  newsletters.js
frontend/src/components/: AppNav.vue  NewsletterCard.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  newsletters.js
frontend/src/views/: DashboardView.vue  HomeView.vue  LoginView.vue  NewsletterDetailView.vue  NewsletterFormView.vue  NotFoundView.vue  RegisterView.vue
output/: eorzea-weekly-2026-03-07.html  eorzea-weekly-test.html
templates/: mothercrystal.html
